# tradecoins

./: .env  .env.example  .gitignore  LICENSE  README.md  compose.yml  get_renew_certificates  index.html  package-lock.json  package.json  vite.config.ts
server/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.sqlx  Makefile  appspec.yml  compose.env.example  compose.yml  ecosystem.config.example.js  justfile  sqlx-data.json
server/.sqlx/: query-0758ffa9cd8495d2f8bb11628c43412b221a3cced7791e721b8d4d76cab11543.json  query-0d33f45efe2c7c274bb6a19111fffb51a2284452a3f426a88958cef8ee0917d5.json  query-3af2b3813f36ca7f3fd2443fc330b53cc77d16339bd9628bfa822fb871be9dd6.json  query-419a7ffba8722c66ad62f16f68b666c7c76a3f55675acb39fd015c9b732378a0.json  query-622b0c0e92ebfbd469a069a6a3654bbe4f897b3c8be739030637bb4b34428ba5.json  query-a21de1e08d5fe025156cbf96133bbfbc5fbd80d37a7a2b9a3a865fb0ee7abb5d.json  query-a73c452cf40f083fda6d9efc62435164ff29ee19b5bceef49f5467dd9141f270.json  query-ba1b216ecd0099f22b3dbc6b08761b2833e3b0b0f63a691f6b47e440257cb01e.json  query-fba08c693cb3e1c43cee0b743fa9fa8a59f47efba56dccf94fadd5c1d99352a7.json
server/configuration/: base.yaml  local.yaml  production.yaml
server/migrations/: 20230630110110_create_users_table.sql  20230903120200_create_users_table.sql  20230911124148_create_portfolio_item_table.sql  20230911124317_create_trade_item_table.sql  20230911140846_edit_portfolio_item.sql  20230911140853_edit_trade_item.sql  20230913143208_trade_item_cascade_delete.sql  20230913144348_trade_item_delete_old_constrain.sql  20230915121656_add_timestapms.sql
server/scripts/: app_start.sh  app_stop.sh  application_stop.sh  init_db.sh  init_db_prod.sh  init_redis.sh
server/src/: configuration.rs  dto.rs  lib.rs  main.rs  routes.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
server/src/authentication/: middleware.rs  password.rs
server/src/domain/: mod.rs  new_user.rs
server/tests/: health_check.rs
(+130 files in other folders)
