[package]
name = "tradecoins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tradecoins"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
serde-aux = "3"
unicode-segmentation = "1"
claims = "0.7"
validator = "0.15"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.44"
anyhow = "1.0.72"
base64 = "0.21.2"
sha3 = "0.10.8"
argon2 = { version = "0.5.1", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.7"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = {version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.19.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"] 

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
serde_urlencoded = "0.7.1"
